@@ -1,0 +1,200 @@
+<?xml version="1.0"?>
+<?xml-stylesheet type="text/xsl" href="xsl/pts-exdep-viewer.xsl" ?>
+<PhoronixTestSuite>
+	<ExternalDependencies>
+		<Information>
+			<Name>Alpine Linux</Name>
+			<Aliases></Aliases>
+			<PackageManager>apk</PackageManager>
+		</Information>
+		<Package>
+			<GenericName>common-dependencies</GenericName>
+			<PackageName>unzip</PackageName>
+			<FileCheck>unzip</FileCheck>
+		</Package>
+		<Package>
+			<GenericName>gtk-development</GenericName>
+			<PackageName>gtk+ gtk+2.0 gtk+3.0</PackageName>
+		</Package>
+		<Package>
+			<GenericName>sdl2-development</GenericName>
+			<PackageName>sdl sdl_image sdl_mixer</PackageName>
+		</Package>
+		<Package>
+			<GenericName>sdl-development</GenericName>
+			<PackageName>sdl sdl_image sdl_mixer</PackageName>
+		</Package>
+		<Package>
+			<GenericName>glut</GenericName>
+			<PackageName>freeglut</PackageName>
+		</Package>
+		<Package>
+			<GenericName>libpng-development</GenericName>
+			<PackageName>libpng</PackageName>
+		</Package>
+		<Package>
+			<GenericName>openssl-development</GenericName>
+			<PackageName>openssl</PackageName>
+		</Package>
+		<Package>
+			<GenericName>build-utilities</GenericName>
+			<PackageName>gcc make automake autoconf</PackageName>
+		</Package>
+		<Package>
+			<GenericName>cairo-development</GenericName>
+			<PackageName>cairo</PackageName>
+		</Package>
+		<Package>
+			<GenericName>xorg-development</GenericName>
+			<PackageName>xorg-server</PackageName>
+		</Package>
+		<Package>
+			<GenericName>tiff</GenericName>
+			<PackageName>tiff</PackageName>
+		</Package>
+		<Package>
+			<GenericName>bison</GenericName>
+			<PackageName>bison</PackageName>
+		</Package>
+		<Package>
+			<GenericName>flex</GenericName>
+			<PackageName>flex</PackageName>
+		</Package>
+		<Package>
+			<GenericName>imlib2-development</GenericName>
+			<PackageName>imlib2</PackageName>
+		</Package>
+		<Package>
+			<GenericName>java</GenericName>
+			<PackageName>java-common</PackageName>
+		</Package>
+		<Package>
+			<GenericName>portaudio-development</GenericName>
+			<PackageName>portaudio</PackageName>
+		</Package>
+		<Package>
+			<GenericName>fortran-compiler</GenericName>
+			<PackageName>gcc</PackageName>
+		</Package>
+		<Package>
+			<GenericName>glew</GenericName>
+			<PackageName>glew</PackageName>
+		</Package>
+		<Package>
+			<GenericName>bc</GenericName>
+			<PackageName>bc</PackageName>
+		</Package>
+		<Package>
+			<GenericName>scons</GenericName>
+			<PackageName>scons</PackageName>
+		</Package>
+		<Package>
+			<GenericName>smartmontools</GenericName>
+			<PackageName>smartmontools</PackageName>
+		</Package>
+		<Package>
+			<GenericName>zlib-development</GenericName>
+			<PackageName>zlib</PackageName>
+		</Package>
+		<Package>
+			<GenericName>jpeg-development</GenericName>
+			<PackageName>libjpeg-turbo</PackageName>
+		</Package>
+		<Package>
+			<GenericName>libaio-development</GenericName>
+			<PackageName>libaio</PackageName>
+		</Package>
+		<Package>
+			<GenericName>pcre</GenericName>
+			<PackageName>pcre</PackageName>
+		</Package>
+		<Package>
+			<GenericName>perl</GenericName>
+			<PackageName>perl</PackageName>
+		</Package>
+		<Package>
+			<GenericName>vorbis-development</GenericName>
+			<PackageName>libvorbis</PackageName>
+		</Package>
+		<Package>
+			<GenericName>p7zip</GenericName>
+			<PackageName>p7zip</PackageName>
+		</Package>
+		<Package>
+			<GenericName>autoconf</GenericName>
+			<PackageName>autoconf</PackageName>
+		</Package>
+		<Package>
+			<GenericName>libtool</GenericName>
+			<PackageName>libtool</PackageName>
+		</Package>
+		<Package>
+			<GenericName>ncurses-development</GenericName>
+			<PackageName>ncurses</PackageName>
+		</Package>
+		<Package>
+			<GenericName>popt</GenericName>
+			<PackageName>popt</PackageName>
+		</Package>
+		<Package>
+			<GenericName>curl</GenericName>
+			<PackageName>curl</PackageName>
+		</Package>
+		<Package>
+			<GenericName>fftw3-development</GenericName>
+			<PackageName>fftw</PackageName>
+		</Package>
+		<Package>
+			<GenericName>cmake</GenericName>
+			<PackageName>cmake</PackageName>
+		</Package>
+		<Package>
+			<GenericName>boost-development</GenericName>
+			<PackageName>boost</PackageName>
+		</Package>
+		<Package>
+			<GenericName>bzip2-development</GenericName>
+			<PackageName>bzip2</PackageName>
+		</Package>
+		<Package>
+			<GenericName>tcl</GenericName>
+			<PackageName>tcl</PackageName>
+		</Package>
+		<Package>
+			<GenericName>glibc-development</GenericName>
+			<PackageName>libc-dev</PackageName>
+		</Package>
+		<Package>
+			<GenericName>python</GenericName>
+			<PackageName>python</PackageName>
+		</Package>
+		<Package>
+			<GenericName>yasm</GenericName>
+			<PackageName>yasm</PackageName>
+		</Package>
+		<Package>
+			<GenericName>gmp-library</GenericName>
+			<PackageName>gmp</PackageName>
+		</Package>
+		<Package>
+			<GenericName>subversion</GenericName>
+			<PackageName>subversion</PackageName>
+		</Package>
+		<Package>
+			<GenericName>git</GenericName>
+			<PackageName>git</PackageName>
+		</Package>
+		<Package>
+			<GenericName>tinyxml</GenericName>
+			<PackageName>libtinyxml</PackageName>
+		</Package>
+		<Package>
+			<GenericName>attr</GenericName>
+			<PackageName>attr</PackageName>
+		</Package>
+		<Package>
+			<GenericName>httpd</GenericName>
+			<PackageName>apache2</PackageName>
+		</Package>
+	</ExternalDependencies>
+</PhoronixTestSuite>
