@@ -6,6 +6,7 @@ Phoronix Test Suite (Git)
 - pts-core: Add OpenSUSE dynamic reverse dependency handler
 - pts-core: For the new result viewer, add Epiphany to the web browser list
 - pts-core: Void Linux external dependency support
+- pts-core: Alpine Linux (APK) external dependency support
 - phoromatic: Don't use a proxy (if available) when trying to connect from Phoromatic client to server
 
 Phoronix Test Suite 6.2.1
